<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.pahlik.LoginActivity"

    >



<RelativeLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/background_page">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/phalik"
        android:elevation="4dp"
        android:translationZ="4dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@drawable/background_layout"
        android:layout_below="@id/imageView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"

            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/texTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/login_to_system"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Place the EditText above the TextView -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_backgroud"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="#323151"
                    android:textColorHint="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <!-- Place the TextView below the EditText -->

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/usernameLayout">

                <!-- Place the EditText above the TextView -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_backgroud"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="#323151"
                    android:textColorHint="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <!-- Place the TextView below the EditText -->

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/button_background_brown"
                android:elevation="2dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="24dp"
                android:textStyle="bold"
                android:translationZ="2dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/registerLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/no_account_create_one"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerLink" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
</ScrollView>
